Fix: make spinner visible.
This    height: fit-content; style messed up spinner style,
which was therefore not visible at all.
Fix by removing this style. Removing it does not seem to affect any
other components in a negative way.

--- a/src/themes/pp-ui-base-theme.css
+++ b/src/themes/pp-ui-base-theme.css
@@ -663,7 +663,6 @@
     right: 0;
     bottom: 0;
     margin: auto;
-    height: fit-content;
 }
 
 .pp-ui-enabled {
